import("//sdkpath.gni")


static_library("webgl") {

  include_dirs = [

    "//third_party/khronos",
    "//third_party/khronos/EGL",
    "//third_party/khronos/noninclude",

    "$ndkIncludePath",
    "$sdkPath/include/c++/7.2.0",
    "$sdkPath/include/c++/7.2.0/include",
    "$sdkPath/include/c++/7.2.0/x86_64-unknown-linux-gnu/",
    "$sdkPath2/usr/lib/x86_64-linux-gnu/glib-2.0/include",

    "$sdkPath/sysroot/usr/include",
    "$sdkPath/sysroot/usr/",
    "$sdkPath/sysroot/usr/include/linux",
    "$sdkPath2/usr/include/libdrm",

    "//",

    "$sdkPath2/usr/include/cairo",
    "$sdkPath2/usr/include/glib-2.0",
    "$sdkPath2/usr/include/gtk-3.0",
    "$sdkPath2/usr/include/gdk-pixbuf-2.0",
    "$sdkPath2/usr/include/atk-1.0",
    "$sdkPath2/usr/include/pango-1.0",

    "//linux",

    "//gen/v8/include",
    "//v8",
    "//v8/include",
    "//gen",
    "//third_party/",
    "//third_party/abseil-cpp",
    "//third_party/icu/source/common",
    "//audio_manager_base/blink",
    "//gen/blink/core",
    "//gen/blink/bindings/modules/v8",
    "//gen/blink/bindings/core/v8",
    "//third_party/libyuv/include",
    "//third_party/openssl/openssl/include",
    "//third_party/khronos",
    "//third_party/libxml/src/include",
    "//third_party/libxml/win32/include",
    "//third_party/fontconfig/src",
    "//third_party/skia",
    "//third_party/skia/include/core",
    "//third_party/skia/include/config",
    "//third_party/skia/include/codec",
    "//third_party/skia/include/device",
    "//third_party/skia/include/effects",
    "//third_party/skia/include/images",
    "//third_party/skia/include/pathops",
    "//third_party/skia/include/ports",
    "//third_party/skia/include/private",
    "//third_party/skia/include/utils",
    "//third_party/skia/include/gpu",
    "//third_party/angle/include",
    "//third_party/angle/src",
    "//third_party/icu/source/common",
    "//third_party/mesa_headers",
    "//third_party/libyuv/include",
    "//third_party/skia/include/third_party/vulkan",
    "//gpu",

    "//gen/v8x64linux",
    "//gen/v8x64linux/include",    
  ]


  cflags = [

    "-fms-extensions",
    "-D_GLIBCXX_USE_C99_MATH",
    "-D_GLIBCXX17_INLINE=inline",
    "-D_GNU_SOURCE",
    "-DUSE_AURA",
    "-DOS_LINUX_FOR_WIN",
    "-DINSIDE_BLINK",
    "-DBLINK_IMPLEMENTATION",
    "-DSK_SUPPORT_LEGACY_CREATESHADER_PTR=1",
    "-DSK_SUPPORT_LEGACY_TYPEFACE_PTR=1",
    "-DENABLE_MB=1",
        
    #  gtk:
    # "-DSK_B32_SHIFT=0",
    # "-DSK_G32_SHIFT=8",
    # "-DSK_R32_SHIFT=16",
    # "-DSK_A32_SHIFT=24",

    #  opengl
    # "-DSK_B32_SHIFT=16",
    # "-DSK_G32_SHIFT=8",
    # "-DSK_R32_SHIFT=0",
    # "-DSK_A32_SHIFT=24",
        
    # "-DV8_HOST_ARCH_X64",
    # "-DV8_ENABLE_MAGLEV",
    "-DDYNAMIC_ANNOTATIONS_ENABLED=0",
    "-DV8_OS_LINUX",
    "-DV8_TARGET_OS_LINUX",
    "-DBUILDING_V8_SHARED=1",
    "-DBUILDING_UV_SHARED=1",

    "-DV8_TYPED_ARRAY_MAX_SIZE_IN_HEAP=64",
    "-DV8_INTL_SUPPORT",
    "-DV8_USE_EXTERNAL_STARTUP_DATA",
    "-DV8_ATOMIC_OBJECT_FIELD_WRITES",
    "-DV8_ENABLE_LAZY_SOURCE_POSITIONS",
    "-DV8_SHARED_RO_HEAP",
    "-DV8_ENABLE_REGEXP_INTERPRETER_THREADED_DISPATCH",
    "-DV8_SHORT_BUILTIN_CALLS",
    "-DV8_ENABLE_SYSTEM_INSTRUMENTATION",
    # "-DV8_ENABLE_ETW_STACK_WALKING",
    "-DV8_ENABLE_WEBASSEMBLY",
    "-DV8_ALLOCATION_FOLDING",
    "-DV8_ALLOCATION_SITE_TRACKING",
    "-DV8_ADVANCED_BIGINT_ALGORITHMS",
    "-DV8_USE_ZLIB",
    # "-DENABLE_HANDLE_ZAPPING",

    #  64位才需要下面的宏：
    # "-DV8_EXTERNAL_CODE_SPACE",
    # "-DV8_DEPRECATION_WARNINGS",
    # "-DV8_COMPRESS_POINTERS",
    # "-DV8_COMPRESS_POINTERS_IN_SHARED_CAGE",
    # "-DV8_31BIT_SMIS_ON_64BIT_ARCH",
    # "-DCPPGC_CAGED_HEAP",
    # "-DCPPGC_YOUNG_GENERATION",
    # "-DCPPGC_POINTER_COMPRESSION",
    # "-DV8_TARGET_ARCH_X64",
    # -----
    "-DV8_HAVE_TARGET_OS",
    "-DV8_TARGET_OS_LINUX",

    # "-DOS_LINUX",
    "-DUSE_OZONE",
    "-DUSE_GLIB",
    "-DU_STATIC_IMPLEMENTATION",
    "-DU_DEFINE_FALSE_AND_TRUE",
    "-DLIBXML_STATIC",
    "-DLIBXSLT_STATIC",
    "-DCURL_STATICLIB",
    "-DSK_SUPPORT_LEGACY_DRAWLOOPER",
    "-D_SILENCE_CXX17_ITERATOR_BASE_CLASS_DEPRECATION_WARNING",
    "-D_CRT_SECURE_NO_WARNINGS",

    "-fPIC", 
    "-fno-exceptions", 
    "-fvisibility=hidden", 
    "--target=x86_64-linux-guneabi", 
    "-DUSE_EGL", 
    "-DSK_GL", 
    "-DSK_SUPPORT_GPU=1", 
    "-DSK_GRAPHITE_ENABLED", 
    "-DSK_SUPPORT_LEGACY_SLUG_CONVERT", 
    "-DSK_B32_SHIFT=16", 
    "-DSK_G32_SHIFT=8", 
    "-DSK_R32_SHIFT=0", 
    "-DSK_A32_SHIFT=24", 
    "-DOS_LINUX=1", 
    "-DENABLE_MB_MEDIA=1", 
    "-DV8_HOST_ARCH_X64", 
    "-DV8_TARGET_ARCH_X64", 
    "-D__POINT_SIZE__=8", 
    "-D__USE_OPENGL__", 
    "-DV8_ENABLE_MAGLEV", 
    "-mno-avx", 
    "-DV8_EXTERNAL_CODE_SPACE",
    "-DV8_DEPRECATION_WARNINGS", 
    "-DV8_COMPRESS_POINTERS", 
    "-DV8_COMPRESS_POINTERS_IN_SHARED_CAGE", 
    "-DV8_31BIT_SMIS_ON_64BIT_ARCH", 
    "-DCPPGC_CAGED_HEAP", 
    "-DCPPGC_YOUNG_GENERATION", 
    "-DCPPGC_POINTER_COMPRESSION", 

  ]


  sources = [

    "//ui/gl/buffer_format_utils.cc",
    "//ui/gl/dc_renderer_layer_params.cc",
    "//ui/gl/dual_gpu_state.cc",
    "//ui/gl/egl_util.cc",
    "//ui/gl/gl_bindings.cc",
    "//ui/gl/gl_bindings_autogen_egl.cc",
    "//ui/gl/gl_bindings_autogen_gl.cc",
    "//ui/gl/gl_context.cc",
    "//ui/gl/gl_context_egl.cc",
    "//ui/gl/gl_context_stub.cc",
    "//ui/gl/gl_display.cc",
    "//ui/gl/gl_display_egl_util.cc",
    "//ui/gl/gl_display_manager.cc",
    "//ui/gl/gl_egl_api_implementation.cc",
    "//ui/gl/gl_enums.cc",
    "//ui/gl/gl_features.cc",
    "//ui/gl/gl_fence.cc",
    "//ui/gl/gl_fence_apple.cc",
    "//ui/gl/gl_fence_arb.cc",
    "//ui/gl/gl_fence_egl.cc",
    "//ui/gl/gl_fence_nv.cc",
    "//ui/gl/gl_gl_api_implementation.cc",
    "//ui/gl/gl_helper.cc",
    "//ui/gl/gl_image.cc",
    "//ui/gl/gl_image_egl.cc",
    "//ui/gl/gl_image_memory.cc",
    "//ui/gl/gl_image_ref_counted_memory.cc",
    "//ui/gl/gl_image_shared_memory.cc",
    "//ui/gl/gl_image_stub.cc",
    "//ui/gl/gl_implementation.cc",
    "//ui/gl/gl_share_group.cc",
    "//ui/gl/gl_state_restorer.cc",
    "//ui/gl/gl_stub_api.cc",
    "//ui/gl/gl_stub_autogen_gl.cc",
    "//ui/gl/gl_surface.cc",
    "//ui/gl/gl_surface_egl.cc",
    "//ui/gl/gl_surface_format.cc",
    "//ui/gl/gl_surface_overlay.cc",
    "//ui/gl/gl_surface_presentation_helper.cc",
    "//ui/gl/gl_surface_stub.cc",
    "//ui/gl/gl_switches.cc",
    "//ui/gl/gl_utils.cc",
    "//ui/gl/gl_version_info.cc",
    "//ui/gl/gpu_switching_manager.cc",
    "//ui/gl/gpu_timing.cc",
    "//ui/gl/scoped_binders.cc",
    "//ui/gl/scoped_egl_image.cc",
    "//ui/gl/scoped_make_current.cc",
    "//ui/gl/scoped_restore_texture.cc",
    "//ui/gl/shader_tracking.cc",
    "//ui/gl/shared_gl_fence_egl.cc",
    "//ui/gl/sync_control_vsync_provider.cc",
    "//ui/gl/trace_util.cc",
    "//gpu/command_buffer/client/buffer_tracker.cc",
    "//gpu/command_buffer/client/client_context_state.cc",
    "//gpu/command_buffer/client/client_discardable_manager.cc",
    "//gpu/command_buffer/client/client_discardable_texture_manager.cc",
    "//gpu/command_buffer/client/client_font_manager.cc",
    "//gpu/command_buffer/client/client_transfer_cache.cc",
    "//gpu/command_buffer/client/cmd_buffer_helper.cc",
    "//gpu/command_buffer/client/command_buffer_direct_locked.cc",
    "//gpu/command_buffer/client/fenced_allocator.cc",
    "//gpu/command_buffer/client/gl_helper_scaling.cc",
    "//gpu/command_buffer/client/gles2_c_lib.cc",
    "//gpu/command_buffer/client/gles2_cmd_helper.cc",
    "//gpu/command_buffer/client/gles2_implementation.cc",
    "//gpu/command_buffer/client/gles2_interface.cc",
    "//gpu/command_buffer/client/gles2_interface_stub.cc",
    "//gpu/command_buffer/client/gles2_lib.cc",
    "//gpu/command_buffer/client/gles2_trace_implementation.cc",
    "//gpu/command_buffer/client/gpu_memory_buffer_manager.cc",
    "//gpu/command_buffer/client/implementation_base.cc",
    "//gpu/command_buffer/client/logging.cc",
    "//gpu/command_buffer/client/mapped_memory.cc",
    "//gpu/command_buffer/client/program_info_manager.cc",
    "//gpu/command_buffer/client/query_tracker.cc",
    "//gpu/command_buffer/client/raster_cmd_helper.cc",
    "//gpu/command_buffer/client/raster_implementation.cc",
    "//gpu/command_buffer/client/raster_implementation_gles.cc",
    "//gpu/command_buffer/client/readback_buffer_shadow_tracker.cc",
    "//gpu/command_buffer/client/ring_buffer.cc",
    "//gpu/command_buffer/client/share_group.cc",
    "//gpu/command_buffer/client/shared_image_interface.cc",
    "//gpu/command_buffer/client/transfer_buffer.cc",
    "//gpu/command_buffer/client/vertex_array_object_manager.cc",
    "//gpu/command_buffer/client/webgpu_cmd_helper.cc",
    "//gpu/command_buffer/common/buffer.cc",
    "//gpu/command_buffer/common/capabilities.cc",
    "//gpu/command_buffer/common/cmd_buffer_common.cc",
    "//gpu/command_buffer/common/context_creation_attribs.cc",
    "//gpu/command_buffer/common/context_result.cc",
    "//gpu/command_buffer/common/debug_marker_manager.cc",
    "//gpu/command_buffer/common/discardable_handle.cc",
    "//gpu/command_buffer/common/gles2_cmd_copy_texture_chromium_utils.cc",
    "//gpu/command_buffer/common/gles2_cmd_format.cc",
    "//gpu/command_buffer/common/gles2_cmd_utils.cc",
    "//gpu/command_buffer/common/gpu_memory_buffer_support.cc",
    "//gpu/command_buffer/common/id_allocator.cc",
    "//gpu/command_buffer/common/mailbox.cc",
    "//gpu/command_buffer/common/mailbox_holder.cc",
    "//gpu/command_buffer/common/presentation_feedback_utils.cc",
    "//gpu/command_buffer/common/raster_cmd_format.cc",
    "//gpu/command_buffer/common/scheduling_priority.cc",
    "//gpu/command_buffer/common/shared_image_trace_utils.cc",
    "//gpu/command_buffer/common/shared_image_usage.cc",
    "//gpu/command_buffer/common/swap_buffers_complete_params.cc",
    "//gpu/command_buffer/common/sync_token.cc",
    "//gpu/command_buffer/common/activity_flags.cc",
    "//gpu/command_buffer/service/abstract_texture_impl.cc",
    "//gpu/command_buffer/service/buffer_manager.cc",
    "//gpu/command_buffer/service/command_buffer_direct.cc",
    "//gpu/command_buffer/service/command_buffer_service.cc",
    "//gpu/command_buffer/service/command_buffer_task_executor.cc",
    "//gpu/command_buffer/service/common_decoder.cc",
    "//gpu/command_buffer/service/context_group.cc",
    "//gpu/command_buffer/service/context_state.cc",
    "//gpu/command_buffer/service/error_state.cc",
    "//gpu/command_buffer/service/feature_info.cc",
    "//gpu/command_buffer/service/framebuffer_completeness_cache.cc",
    "//gpu/command_buffer/service/framebuffer_manager.cc",
    "//gpu/command_buffer/service/gl_context_virtual.cc",
    "//gpu/command_buffer/service/gl_state_restorer_impl.cc",
    "//gpu/command_buffer/service/gles2_cmd_clear_framebuffer.cc",
    "//gpu/command_buffer/service/gles2_cmd_copy_tex_image.cc",
    "//gpu/command_buffer/service/gles2_cmd_copy_texture_chromium.cc",
    "//gpu/command_buffer/service/gles2_cmd_decoder.cc",
    "//gpu/command_buffer/service/gles2_cmd_decoder_passthrough.cc",
    "//gpu/command_buffer/service/gles2_cmd_decoder_passthrough_doers.cc",
    "//gpu/command_buffer/service/gles2_cmd_decoder_passthrough_handlers.cc",
    "//gpu/command_buffer/service/gles2_cmd_decoder_passthrough_handlers_autogen.cc",
    "//gpu/command_buffer/service/gles2_cmd_srgb_converter.cc",
    "//gpu/command_buffer/service/gles2_cmd_validation.cc",
    "//gpu/command_buffer/service/gles2_query_manager.cc",
    "//gpu/command_buffer/service/gpu_command_buffer_memory_tracker.cc",
    "//gpu/command_buffer/service/gpu_fence_manager.cc",
    "//gpu/command_buffer/service/gpu_state_tracer.cc",
    "//gpu/command_buffer/service/gpu_switches.cc",
    "//gpu/command_buffer/service/gpu_task_scheduler_helper.cc",
    "//gpu/command_buffer/service/gpu_tracer.cc",
    "//gpu/command_buffer/service/gr_cache_controller.cc",
    "//gpu/command_buffer/service/gr_shader_cache.cc",
    "//gpu/command_buffer/service/id_manager.cc",
    "//gpu/command_buffer/service/image_factory.cc",
    "//gpu/command_buffer/service/indexed_buffer_binding_host.cc",
    "//gpu/command_buffer/service/logger.cc",
    "//gpu/command_buffer/service/mailbox_manager_dummy.cc",
    "//gpu/command_buffer/service/mailbox_manager_factory.cc",
    "//gpu/command_buffer/service/mailbox_manager_impl.cc",
    "//gpu/command_buffer/service/memory_tracking.cc",
    "//gpu/command_buffer/service/multi_draw_manager.cc",
    "//gpu/command_buffer/service/native_image_buffer.cc",
    "//gpu/command_buffer/service/passthrough_abstract_texture_impl.cc",
    "//gpu/command_buffer/service/passthrough_discardable_manager.cc",
    "//gpu/command_buffer/service/passthrough_program_cache.cc",
    "//gpu/command_buffer/service/program_cache.cc",
    "//gpu/command_buffer/service/program_manager.cc",
    "//gpu/command_buffer/service/query_manager.cc",
    "//gpu/command_buffer/service/raster_cmd_validation.cc",
    "//gpu/command_buffer/service/raster_decoder.cc",
    "//gpu/command_buffer/service/ref_counted_lock.cc",
    "//gpu/command_buffer/service/renderbuffer_manager.cc",
    "//gpu/command_buffer/service/sampler_manager.cc",
    "//gpu/command_buffer/service/scheduler.cc",
    "//gpu/command_buffer/service/scheduler_sequence.cc",
    "//gpu/command_buffer/service/scheduler_task_runner.cc",
    "//gpu/command_buffer/service/service_discardable_manager.cc",
    "//gpu/command_buffer/service/service_font_manager.cc",
    "//gpu/command_buffer/service/service_transfer_cache.cc",
    "//gpu/command_buffer/service/service_utils.cc",
    "//gpu/command_buffer/service/shader_manager.cc",
    "//gpu/command_buffer/service/shader_translator.cc",
    "//gpu/command_buffer/service/shader_translator_cache.cc",
    "//gpu/command_buffer/service/shared_context_state.cc",
    "//gpu/command_buffer/service/shared_memory_region_wrapper.cc",
    "//gpu/command_buffer/service/skia_utils.cc",
    "//gpu/command_buffer/service/sync_point_manager.cc",
    "//gpu/command_buffer/service/texture_base.cc",
    "//gpu/command_buffer/service/texture_manager.cc",
    "//gpu/command_buffer/service/transfer_buffer_manager.cc",
    "//gpu/command_buffer/service/transform_feedback_manager.cc",
    "//gpu/command_buffer/service/validating_abstract_texture_impl.cc",
    "//gpu/command_buffer/service/vertex_array_manager.cc",
    "//gpu/command_buffer/service/vertex_attrib_manager.cc",
    "//gpu/command_buffer/client/gl_helper_gpu.cc",
    "//gpu/command_buffer/client/gpu_switches_client.cc",
    "//gpu/command_buffer/common/skia_utils_common.cc",
    "//gpu/command_buffer/service/gl_utils_gpu.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_compressed_texture_astc.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_compressed_texture_etc.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_compressed_texture_etc1.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_compressed_texture_pvrtc.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_compressed_texture_s3tc.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_compressed_texture_s3tc_srgb.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_context_attribute_helpers.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_context_event.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_context_group.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_context_object.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_debug_renderer_info.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_debug_shaders.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_depth_texture.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_draw_buffers.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_draw_instanced_base_vertex_base_instance.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_extension.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_fence_sync.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_framebuffer.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_lose_context.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_multi_draw.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_multi_draw_common.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_multi_draw_instanced_base_vertex_base_instance.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_object.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_program.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_query.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_renderbuffer.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_rendering_context.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_rendering_context_base.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_sampler.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_shader.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_shader_precision_format.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_shared_object.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_shared_platform_3d_object.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_sync.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_texture.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_timer_query_ext.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_transform_feedback.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_uniform_location.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_unowned_texture.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_vertex_array_object.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_vertex_array_object_base.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_vertex_array_object_oes.cc",
    "//third_party/blink/renderer/modules/webgl/webgl2_rendering_context.cc",
    "//third_party/blink/renderer/modules/webgl/webgl2_rendering_context_base.cc",
    "//third_party/blink/renderer/modules/webgl/ext_blend_min_max.cc",
    "//third_party/blink/renderer/modules/webgl/ext_color_buffer_float.cc",
    "//third_party/blink/renderer/modules/webgl/ext_color_buffer_half_float.cc",
    "//third_party/blink/renderer/modules/webgl/ext_disjoint_timer_query.cc",
    "//third_party/blink/renderer/modules/webgl/ext_disjoint_timer_query_webgl2.cc",
    "//third_party/blink/renderer/modules/webgl/ext_float_blend.cc",
    "//third_party/blink/renderer/modules/webgl/ext_frag_depth.cc",
    "//third_party/blink/renderer/modules/webgl/ext_shader_texture_lod.cc",
    "//third_party/blink/renderer/modules/webgl/ext_srgb.cc",
    "//third_party/blink/renderer/modules/webgl/ext_texture_compression_bptc.cc",
    "//third_party/blink/renderer/modules/webgl/ext_texture_compression_rgtc.cc",
    "//third_party/blink/renderer/modules/webgl/ext_texture_filter_anisotropic.cc",
    "//third_party/blink/renderer/modules/webgl/ext_texture_norm_16.cc",
    "//third_party/blink/renderer/modules/webgl/khr_parallel_shader_compile.cc",
    "//third_party/blink/renderer/modules/webgl/oes_draw_buffers_indexed.cc",
    "//third_party/blink/renderer/modules/webgl/oes_element_index_uint.cc",
    "//third_party/blink/renderer/modules/webgl/oes_fbo_render_mipmap.cc",
    "//third_party/blink/renderer/modules/webgl/oes_standard_derivatives.cc",
    "//third_party/blink/renderer/modules/webgl/oes_texture_float.cc",
    "//third_party/blink/renderer/modules/webgl/oes_texture_float_linear.cc",
    "//third_party/blink/renderer/modules/webgl/oes_texture_half_float.cc",
    "//third_party/blink/renderer/modules/webgl/oes_texture_half_float_linear.cc",
    "//third_party/blink/renderer/modules/webgl/oes_vertex_array_object.cc",
    "//third_party/blink/renderer/modules/webgl/ovr_multiview_2.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_buffer.cc",
    "//third_party/blink/renderer/modules/webgl/webgl_color_buffer_float.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_texture.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_timer_query_ext.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_transform_feedback.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_uniform_location.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_vertex_array_object.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_vertex_array_object_oes.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl2_rendering_context.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_active_info.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_buffer.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_color_buffer_float.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_compressed_texture_astc.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_compressed_texture_etc.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_compressed_texture_etc1.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_compressed_texture_pvrtc.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_compressed_texture_s3tc.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_compressed_texture_s3tc_srgb.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_context_attributes.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_context_event.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_context_event_init.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_debug_renderer_info.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_debug_shaders.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_depth_texture.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_draw_buffers.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_draw_instanced_base_vertex_base_instance.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_framebuffer.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_lose_context.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_multi_draw.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_multi_draw_instanced_base_vertex_base_instance.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_power_preference.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_program.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_query.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_renderbuffer.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_rendering_context.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_sampler.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_shader.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_shader_precision_format.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_webgl_sync.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_union_webgl2renderingcontext_webglrenderingcontext.cc",
    "//third_party/blink/renderer/platform/graphics/web_graphics_context_3d_provider_util.cc",
    "//third_party/blink/renderer/platform/graphics/web_graphics_context_3d_provider_wrapper.cc",
    "//third_party/blink/renderer/platform/graphics/web_graphics_context_3d_video_frame_pool.cc",
    "//third_party/blink/renderer/platform/graphics/gpu/drawing_buffer.cc",
    "//third_party/blink/renderer/platform/graphics/gpu/extensions_3d_util.cc",
    "//third_party/blink/renderer/platform/graphics/gpu/graphics_context_3d_utils.cc",
    "//third_party/blink/renderer/platform/graphics/gpu/image_layer_bridge.cc",
    "//third_party/blink/renderer/platform/graphics/gpu/shared_context_rate_limiter.cc",
    "//third_party/blink/renderer/platform/graphics/gpu/shared_gpu_context.cc",
    "//third_party/blink/renderer/platform/graphics/gpu/webgl_image_conversion.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_ext_texture_compression_bptc.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_ext_texture_compression_rgtc.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_ext_texture_filter_anisotropic.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_ext_texture_norm_16.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_oes_vertex_array_object.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_oes_draw_buffers_indexed.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_oes_element_index_uint.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_oes_fbo_render_mipmap.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_oes_standard_derivatives.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_oes_texture_float.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_oes_texture_float_linear.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_oes_texture_half_float.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_oes_texture_half_float_linear.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_ext_blend_min_max.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_ext_color_buffer_float.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_ext_color_buffer_half_float.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_ext_disjoint_timer_query.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_ext_disjoint_timer_query_webgl2.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_ext_frag_depth.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_ext_shader_texture_lod.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_ext_srgb.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_ext_float_blend.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_ovr_multiview_2.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_video_frame.cc",
    "//third_party/blink/renderer/modules/webgl/angle_instanced_arrays.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_angle_instanced_arrays.cc",
    "//gen/third_party/blink/renderer/bindings/modules/v8/v8_khr_parallel_shader_compile.cc",
    "//gpu/ipc/raster_in_process_context.cc",
    "//gpu/ipc/gl_in_process_context.cc",
    "//gpu/ipc/gpu_in_process_thread_service.cc",
    "//gpu/ipc/in_process_command_buffer.cc",
    "//gpu/ipc/in_process_gpu_thread_holder.cc",
    "//content/renderer/Webgraphicscontext3dProviderImpl.cc",
    "//gpu/command_buffer/service/shared_image/shared_image_representation.cc",
    "//gpu/command_buffer/service/shared_image/shared_memory_image_backing.cc",
    "//gpu/command_buffer/service/shared_image/shared_memory_image_backing_factory.cc",
    "//gpu/command_buffer/service/shared_image/skia_gl_image_representation.cc",
    "//gpu/command_buffer/service/shared_image/wrapped_sk_image_backing_factory.cc",
    "//gpu/command_buffer/service/shared_image/compound_image_backing.cc",
    "//gpu/command_buffer/service/shared_image/egl_image_backing.cc",
    "//gpu/command_buffer/service/shared_image/egl_image_backing_factory.cc",
    "//gpu/command_buffer/service/shared_image/gl_common_image_backing_factory.cc",
    "//gpu/command_buffer/service/shared_image/gl_image_backing.cc",
    "//gpu/command_buffer/service/shared_image/gl_image_backing_factory.cc",
    "//gpu/command_buffer/service/shared_image/gl_repack_utils.cc",
    "//gpu/command_buffer/service/shared_image/gl_texture_image_backing.cc",
    "//gpu/command_buffer/service/shared_image/gl_texture_image_backing_factory.cc",
    "//gpu/command_buffer/service/shared_image/gl_texture_image_backing_helper.cc",
    "//gpu/command_buffer/service/shared_image/raw_draw_image_backing.cc",
    "//gpu/command_buffer/service/shared_image/raw_draw_image_backing_factory.cc",
    "//gpu/command_buffer/service/shared_image/shared_image_backing.cc",
    "//gpu/command_buffer/service/shared_image/shared_image_backing_factory.cc",
    "//gpu/command_buffer/service/shared_image/shared_image_factory.cc",
    "//gpu/command_buffer/service/shared_image/shared_image_manager.cc",
    "//gpu/command_buffer/service/command_buf_service_empty.cc",
    "//gpu/config/gpu_switching.cc",
    "//ui/gl/init/create_gr_gl_interface.cc",
    "//ui/gl/init/gl_factory.cc",
    "//ui/gl/init/gl_factory_ozone.cc",
    "//ui/gl/init/gl_initializer_ozone.cc",
    "//ui/gl/init/gl_display_egl_util_ozone.cc",
    "//gpu/config/gpu_driver_bug_workarounds.cc",
    "//gpu/config/gpu_feature_info.cc",
    "//gpu/config/gpu_finch_features.cc",
    "//gpu/config/gpu_info.cc",
    "//gpu/config/gpu_preferences.cc",
    "//gpu/config/skia_limits.cc",
    "//gpu/skia_bindings/gl_bindings_skia_cmd_buffer.cc",
    "//gpu/skia_bindings/gles2_implementation_with_grcontext_support.cc",
    "//gpu/skia_bindings/grcontext_for_gles2_interface.cc",
    "//gpu/config/gpu_switches_config.cc",
    "//gpu/config/dx_diag_node.cc",
    "//gpu/config/gpu_info_collector.cc",
    "//gpu/config/gpu_util.cc",
    "//gpu/config/gpu_driver_bug_list.cc",
    "//gpu/config/gpu_blocklist.cc",
    "//gpu/config/gpu_control_list.cc",
    "//gpu/config/device_perf_info.cc",
    "//gen/gpu/config/software_rendering_list_autogen.cc",
    "//gen/gpu/config/gpu_driver_bug_list_autogen.cc",
    "//gpu/command_buffer/service/shared_image_interface_in_process.cc",

    "//ui/ozone/common/base_keyboard_hook.cc",
    "//ui/ozone/common/bitmap_cursor.cc",
    "//ui/ozone/common/bitmap_cursor_factory.cc",
    "//ui/ozone/common/egl_util_ozone.cc",
    "//ui/ozone/common/features.cc",
    "//ui/ozone/common/gl_ozone_egl.cc",
    "//ui/ozone/common/gl_surface_egl_readback.cc",
    "//ui/ozone/common/native_pixmap_egl_binding.cc",
    "//ui/ozone/common/stub_client_native_pixmap_factory.cc",
    "//ui/ozone/common/stub_overlay_manager.cc",

    "//ui/ozone/platform_selection.cc",
    # "//ui/ozone/public/client_native_pixmap_factory_ozone.cc",
    # "//ui/ozone/public/gpu_platform_support_host.cc",
    # "//ui/ozone/public/input_controller.cc",
    # "//ui/ozone/public/native_pixmap_gl_binding.cc",
    # "//ui/ozone/public/overlay_candidates_ozone.cc",
    # "//ui/ozone/public/overlay_plane.cc",
    # "//ui/ozone/public/overlay_surface.cc",
    # "//ui/ozone/public/overlay_surface_candidate.cc",
    "//ui/ozone/public/ozone_platform.cc",
    "//ui/ozone/public/ozone_switches.cc",
    # "//ui/ozone/public/platform_global_shortcut_listener.cc",
    # "//ui/ozone/public/platform_gl_egl_utility.cc",
    "//ui/ozone/public/platform_keyboard_hook.cc",
    # "//ui/ozone/public/platform_menu_utils.cc",
    # "//ui/ozone/public/platform_screen.cc",
    # "//ui/ozone/public/platform_user_input_monitor.cc",
    "//ui/ozone/public/surface_factory_ozone.cc",
    "//ui/ozone/public/surface_ozone_canvas.cc",
    "//gen/ui/ozone/constructor_list.cc",
    "//gen/ui/ozone/platform_list.cc",

  ]


}

